# libsnobol4

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  MIGRATION.md  Makefile  README.md  SECURITY.md  composer.json  phpunit.xml  release-notes-v0.10.0.md
.ddev/: config.yaml  docker-compose.override.yaml
.ddev/web-build/: Dockerfile  Dockerfile.snobol
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci-core.yml  ci-php.yml  ci.yml  docs.yml  fuzz.yml  sanitizers.yml  valgrind.yml
bench/: Harness.php  README.md  backtracking.php  compare.php  compare_jit.php  compare_pcre2.php  dates.php  jit_guard.php  replace.php  repro_regression.php  resolve_autoload.php  results_backtracking.json  results_builtin.json  results_dates.json  results_layered_search.json  results_pcre2_comparison.json  results_replace.json  results_tokenize.json  run_all.php  tokenize.php  transform.php  unicode.php
bench/baselines/: c_probe_after.txt  c_probe_before.txt  php_probe_after.txt  php_probe_before.txt  php_probe_full_after.txt  php_probe_full_before.txt  search_split_tests_before.txt
bench/c/: CMakeLists.txt  bench_alternation.c  bench_complex_http.c  bench_delimiter.c  bench_literal.c  bench_probe.c  bench_runner.c  bench_shared.h  bench_substitution.c  bench_tokenization.c
bench/php/: probe.php
bench/results/: build_baseline.sh  search_perf_baseline.json  update_baseline.sh
bindings/php/: .gitignore  CMakeLists.txt  Makefile  README.md  composer.json  config.h.in  config.m4  config.w32  core_amalgam.c  libtool  phpunit.xml  probe.php
bindings/php/.ddev/: README.md  config.yaml  docker-compose.core.yaml  docker-compose.override.yaml
bindings/php/.ddev/commands/web/: artisan  build-c-probe  build-snobol-extension  test  test-c-probe
bindings/php/.ddev/web-build/: Dockerfile
bindings/php/php-src/: Array_.php  Builder.php  DynamicPatternCache.php  Pattern.php  PatternHelper.php  Table.php  Text.php  functions.php
bindings/php/public/: benchmark_backtracking.php  benchmark_literal.php  debug_split.php  observe_memory.php  test.php  test_label.php
bindings/php/src/: php_snobol.c  php_snobol.h  snobol_array_php.c  snobol_array_php.h  snobol_builder_php.c  snobol_dynamic_pattern_php.c  snobol_pattern.c  snobol_pattern_cache_php.c  snobol_pattern_helper_php.c  snobol_table_php.c
bindings/php/stubs/: Builder.php  Pattern.php  PatternHelper.php  functions.php
bindings/php/tests/php/: ApiVersionTest.php  ArchitecturalConstraintsTest.php  BreakTest.php  BuilderTest.php  CPhpCouplingTest.php  CaseInsensitiveCompileExTest.php  ComparisonsTest.php  ConvenienceApiTest.php  JitBranchesTest.php  JitCPhpCouplingTest.php  JitObservabilityTest.php  JitOpcodeCoverageTest.php  PatternCacheTest.php  PatternTest.php  PrimitivesTest.php  SearchVmCaptureTest.php  TableTest.php  TemplateOpsTest.php  TextTest.php  UnicodeTest.php  check_methods.php
ci/: Dockerfile.jit-qemu  Dockerfile.jit-qemu-armv7  Dockerfile.jit-qemu-riscv64
core/: CMakeLists.txt
core/cmake/: libsnobol4.pc.in  libsnobol4Config.cmake.in  version.h.in
core/include/snobol/: arena.h  array.h  ast.h  compiler.h  dynamic_pattern.h  jit.h  jit_backend.h  jit_ir.h  lexer.h  parser.h  search.h  simd.h  snobol.h  snobol_attrs.h  snobol_internal.h  string_fn.h  table.h  type_fn.h  unicode_fold.h  vm.h
core/src/: api.c  array.c  ast.c  compiler.c  compiler_analysis.c  compiler_codegen.c  compiler_internal.h  dynamic_pattern.c  jit.c  jit_backend_arm32.c  jit_backend_arm64.c  jit_backend_riscv64.c  jit_backend_sljit.c  jit_backend_x86_64.c  jit_ir.c  lexer.c  parser.c  pattern_build.c  search.c  search_internal.h  search_meta.c  search_simd.c  search_tiers.c  string_fn.c  table.c  type_fn.c  unicode_fold.c  unicode_fold_data.c  version.c  vm.c  vm_capture.c  vm_choice.c  vm_exec.c
dev/: build_in_ddev.sh  gen_unicode_fold.c  generate_amalgam.sh  generate_version_header.sh  in_ddev.sh  run_smoke.sh  run_test.sh  stress_phpunit.sh  test_in_ddev.sh  trace_vm.sh  valgrind.supp  valgrind_phpunit.sh
docs/: CONTRIBUTORS.md  LANGUAGE_COMPATIBILITY.md  php-manual.md  why-snobol-vs-pcre.md
examples/c/: CMakeLists.txt  basic.c  builtin_examples.c  captures.c  one_shot_match.c
php-src/: Builder.php  DynamicPatternCache.php  Lexer.php  Parser.php  Pattern.php  PatternCache.php  PatternHelper.php  builder.php
public/: benchmark_charclass.php  benchmark_subst.php  print_ast_tree.php  smoke_test_helpers.php  test.php
snobol4-core/: config.m4  php_snobol.c  php_snobol.h  snobol_ast.c  snobol_ast.h  snobol_dynamic_pattern.c  snobol_dynamic_pattern.h  snobol_dynamic_pattern_php.h  snobol_internal.h  snobol_jit.h  snobol_lexer.c  snobol_parser.c  snobol_table.c  snobol_table.h
snobol4-php/: config.m4  php_snobol.c  snobol_ast.c  snobol_ast.h  snobol_compiler.c  snobol_compiler.h  snobol_dynamic_pattern.c  snobol_dynamic_pattern.h  snobol_dynamic_pattern_php.c  snobol_jit.c  snobol_jit.h  snobol_lexer.h  snobol_parser.h  snobol_pattern.c  snobol_table_php.c  snobol_table_php.h  snobol_vm.c  snobol_vm.h
tests/c/: CMakeLists.txt  Makefile  test_api_literal_match.c  test_api_match.c  test_api_version.c  test_arena.c  test_array.c  test_ast.c  test_automaton_skip.c  test_backtracking.c  test_break_grammar.c  test_builtin_dispatch.c  test_capture_registers.c  test_catastrophic.c  test_choice_arena.c  test_choice_shortcircuit.c  test_compact_choice.c  test_comparison.c  test_comparison_numeric.c  test_compiler.c  test_control_flow.c  test_dynamic_patterns.c  test_fusion.c  test_jit_arm32.c  test_jit_branches.c  test_jit_c_api.c  test_jit_cache.c  test_jit_cfg.c  test_jit_ir.c  test_jit_method.c  test_jit_observability.c  test_jit_opcode_coverage.c  test_jit_profitability.c  test_jit_riscv64.c  test_jit_x86_64.c  test_lexer.c  test_parser.c  test_pattern_abort_fail_succeed.c  test_pattern_bal.c  test_pattern_breakx.c  (+33 more)
tests/fuzz/: CMakeLists.txt  fuzz_compiler.c  fuzz_vm.c
(+28 files in other folders)
